--- a/README
+++ b/README
@@ -13,7 +13,7 @@ We tested this program on Ubuntu 16.04 with Python version 3.5.2 and
 Windows 10 with Python version 3.4.
 
 The program uses some Python modules that are not installed by default, but are
-available from pip: igraph, networkx, numpy, and llist.
+available from pip: igraph, networkx, numpy, matplotlib, and llist.
 
 We also wrote a C++ program to do the geometry for the 3-connected
 technique. It relies primarily on the Wykobi library to perform
@@ -30,7 +30,18 @@ cd wykobi-master
 make
 make install
 
-For Windows 10 we built the C++ file in Microsoft Visual Studio.
+For Windows 10 we built the C++ file with Microsoft Visual Studio, using the Developer Command Prompt. This tool is in the Visual Studio folder with the name "Developer Command Prompt for <Visual Studio version>" (we used Visual Studio Community 2013). From there, type the following commands:
 
-<insert windows instructions here>
+cd <wykobi-master folder location>
+cl /EHsc /I <boost directory> /Femake-st-numbering make-st-
+	numbering.cpp
+
+Note: /Fe is is the exe output filename - there's no space after it. /I indicates additional include dictionaries. In this case, we need to tell it where to find our boost library. Mine is in: C:\Program Files\boost\boost_1_62_0. So the command looks like:
+
+cl /EHsc /I "C:/Program Files/boost/boost_1_62_0" /Femake-st-numbering make-st-numbering.cpp
+
+There is no compliation required for the boost library, only that it be downloaded and included (it's entirely headers).
+
+
+
 
